Removed erroneous version number

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	
 	<head>
-		<title>jQuery miniColors v0.1</title>
+		<title>jQuery miniColors</title>
 		
 		<style type="text/css">
 			BODY {
