Added check to make sure selector does not go outside of window width.

--- a/index.html
+++ b/index.html
@@ -129,6 +129,11 @@
 			Attached to a hidden input<br />
 			<input type="hidden" name="color4" class="color-picker" size="6" />
 		</p>
+        
+		<p style="position: absolute; right: 0; top: 0; padding-right: 10px;">
+			Absolute positioned in upper right-hand corner
+			<input type="hidden" name="color4" class="color-picker" size="6" />
+		</p>
 		
 		
 		
