Create miniColors core library and separate functions into lib / input element concerns. Still lots of coupling to input element

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		
+		<script type="text/javascript" src="miniColors.js"></script>
 		<script type="text/javascript" src="jquery.miniColors.js"></script>
 		<link type="text/css" rel="stylesheet" href="jquery.miniColors.css" />
 		
