Added support for triggerPosition

--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
 		<p style="margin-top: 50px;">
 			Select an action to apply to all of the controls on this page:
 			<br />
-			<input type="button" id="triggerBefore" value="Trigger is Before" />
-			<input type="button" id="triggerAfter" value="Trigger is After" disabled="disabled" /><br />
 			<input type="button" id="makeReadonly" value="Read-only" />
 			<input type="button" id="unmakeReadonly" value="Not Read-only" disabled="disabled" /><br />
 			<input type="button" id="disable" value="Disable" />
 			<input type="button" id="enable" value="Enable" disabled="disabled" /><br />
+			<input type="button" id="triggerBefore" value="Trigger Before" />
+			<input type="button" id="triggerAfter" value="Trigger After" disabled="disabled" /><br />
 			<input type="button" id="destroy" value="Destroy" />
 			<input type="button" id="create" value="Create" disabled="disabled" /><br />
 			<input type="button" id="randomize" value="Random Color" />
