--- a/index.html
+++ b/index.html
@@ -368,6 +368,13 @@
 			utility functions.
 		</p>
 		
+		<h3><code>show</code> &amp; <code>hide</code></h3>
+		<p>
+			The plugin will trigger a <code>show</code> event on the original <code>input</code> 
+			element when the color picker is initially shown, and a <code>event</code> when the 
+			color picker is hidden.
+		</p>
+		
 		<!-- Settings -->
 		<h2 id="settings">Settings</h2>
 		<p>
