--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="initial-scale=1.0" />
 	<link rel="stylesheet" href="jquery.minicolors.css" />
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="jquery.minicolors.js"></script>
 	<style>
 		
