Fixed positioning example

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ $('INPUT.minicolors').minicolors(<em>settings</em>);
                     <code>default</code> <input class="minicolors" data-position="default" type="text" value="#3b98bd">
                     <code>top</code> <input class="minicolors" data-position="top" type="text" value="#50c900">
                     <code>left</code> <input class="minicolors" data-position="left" type="text" value="#7745ff">
-                    <code>top left</code> <input class="minicolors" data-control="top left" type="text" value=
+                    <code>top left</code> <input class="minicolors" data-position="top left" type="text" value=
                     "#ffb987">
                 </div>
             </dd>
