Removed opacity class on bootstrap demo

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ $(<em>selector</em>).minicolors({
                     <input class="minicolors" type="text" value="#7ad674"><br>
                     <br>
                     Bootstrap theme (<code>bootstrap</code>)<br>
-                    <input class="minicolors opacity" data-theme="bootstrap" type="text" value=
+                    <input class="minicolors" data-theme="bootstrap" type="text" value=
                     "#2eb2e6"><br>
                     <br>
                     No theme (<code>none</code>)<br>
