Fixed error in rgbString/rgbaString description

--- a/index.html
+++ b/index.html
@@ -433,8 +433,7 @@ $(<em>selector</em>).minicolors('method', <em>[data]</em>);
             <dt><code>rgbString</code> &amp; <code>rgbaString</code></dt>
 
             <dd>
-                <p>Returns an RGB or RGBA string suitable for use in your CSS. If opacity is enabled on the specified
-                control, an RGBA string will be returned. Otherwise an RGB string will be returned. Examples:</p>
+                <p>Returns an RGB or RGBA string suitable for use in your CSS. Examples:</p>
                 <pre>
 rgb(0, 82, 148)
 rgba(0, 82, 148, .75)
