Updated version to 2.0.0

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 <body>
     <div id="main">
-        <h1>jQuery MiniColors 2.0 beta</h1>
+        <h1>jQuery MiniColors 2.0</h1>
 
         <p>A project by Cory LaViska of <a href="http://www.abeautifulsite.net/">A Beautiful Site</a>.</p>
 
