Removed data-default-value attribute from standard control example

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
         <h3>Standard Controls</h3>
 
-        <p>Hue <input class="minicolors" data-default-value="#fc0" type="text" value="#3b98bd"> Saturation
+        <p>Hue <input class="minicolors" type="text" value="#3b98bd"> Saturation
         <input class="minicolors" data-control="saturation" type="text" value="#50c900"> Brightness <input class=
         "minicolors" data-control="brightness" type="text" value="#7745ff"> Wheel <input class="minicolors"
         data-control="wheel" type="text" value="#ffb987"></p>
