Added hexString documentation.

--- a/index.html
+++ b/index.html
@@ -440,6 +440,16 @@ rgba(0, 82, 148, .75)
 </pre>
             </dd>
 
+            <dt><code>hexString</code> &amp; <code>hexString</code></dt>
+
+            <dd>
+                <p>Returns a hex string. Examples:</p>
+                <pre>
+#005294
+#BADA55
+</pre>
+            </dd>
+
             <dt><code>settings</code></dt>
 
             <dd>
