--- a/index.html
+++ b/index.html
@@ -8,17 +8,14 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	
 	<!-- Bootstrap 3 -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css">
-	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 	
 	<!-- MiniColors -->
 	<script src="jquery.minicolors.js"></script>
 	<link rel="stylesheet" href="jquery.minicolors.css">
 	
 	<style>
-		body {
-			line-height: 1.8;
-		}
 		dl {
 			margin: 20px 0;
 		}
@@ -60,8 +57,8 @@
                 //  $(selector).minicolors();
                 //
                 // The way I've done it below is just for the demo, so don't get confused 
-                // by it. Also, data- attributes aren't supported at this time. Again, 
-                // they're only used for the purposes of this demo.
+                // by it. Also, data- attributes aren't supported at this time...they're 
+                // only used for this demo.
                 //
 				$(this).minicolors({
 					control: $(this).attr('data-control') || 'hue',
@@ -87,7 +84,7 @@
 	</script>
 </head>
 <body>
-	<div class="row" style="margin: 40px 20px;">
+	<div class="row" style="margin: 40px 40px;">
 		<div class="col-12">
 			
 			<!-- Intro -->
