Updated for Bootstrap 3.0.0

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<!-- Intro -->
 			<div id="intro" class="jumbotron">
 				<h1>jQuery MiniColors 2.1</h1>
-				<p class="text-muted">beta 1 &middot; Now with Bootstrap 3 support!</p>
+				<p class="text-muted">Now with Bootstrap 3 support!</p>
 				<p>A project by Cory LaViska of <a href="http://www.abeautifulsite.net/">A Beautiful Site</a></p>
 			</div>
 			
