Added initial value to letter-case demo

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 						<div class="form-group">
 							<label for="letter-case">Letter Case</label>
 							<br>
-							<input type="text" id="letter-case" class="form-control demo" data-letterCase="uppercase">
+							<input type="text" id="letter-case" class="form-control demo" data-letterCase="uppercase" value="#abcdef">
 							<span class="help-block">
 								This field will always be uppercase.
 							</span>
