Fixed typo in docs

--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@ $(<em>selector</em>).minicolors({
 </pre>
 					<p class="alert alert-warning">
 						<strong>Warning!</strong> This event will fire a lot when the user drags the 
-						color picker around. Using the <code>changeDelay</code> setting to reduce its 
+						color picker around. Use the <code>changeDelay</code> setting to reduce its 
 						frequency.
 					</p>
 				</dd>
