Added link to docs

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 				<li><a href="#demos">Demos</a></li>
 				<li><a href="#api">API</a>
 					<ul>
+						<li><a href="#instantiation">Instantiation</a></li>
 						<li><a href="#settings">Settings</a></li>
 						<li><a href="#methods">Methods</a></li>
 						<li><a href="#events">Events</a></li>
