Updated to Bootstrap 3.1.0 and added input-group demo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
     <!-- Bootstrap 3 -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
     <!-- MiniColors -->
@@ -254,6 +254,22 @@
                             <input type="text" id="letter-case" class="form-control demo" data-letterCase="uppercase" value="#abcdef">
                             <span class="help-block">
                                 This field will always be uppercase.
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-sm-4 col-12">
+                        <div class="form-group">
+                            <label for="input-group">Input Groups</label>
+                            <div class="input-group">
+                                <input type="text" id="input-group" class="form-control demo" value="#ff0000"/>
+                                <span class="input-group-btn">
+                                    <button class="btn btn-default" type="button">Button</button>
+                                </span>
+                            </div>
+                            <span class="help-block">
+                                Example using Bootstrap's input groups.
                             </span>
                         </div>
                     </div>
