Added demo for input group with addon

--- a/index.html
+++ b/index.html
@@ -273,6 +273,21 @@
                             </span>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-sm-4 col-12">
+                        <div class="form-group">
+                            <label for="more-input-group">More Input Groups</label>
+                            <div class="input-group">
+                                <span class="input-group-addon">Color</span>
+                                <input type="text" id="more-input-group" class="form-control demo" value="#ff0000"/>
+                                <span class="input-group-btn">
+                                    <button class="btn btn-default" type="button">Button</button>
+                                </span>
+                            </div>
+                            <span class="help-block">
+                                Input group example with addon.
+                            </span>
+                        </div>
+                    </div>
                 </div>
             </div>
 
