Fixed typo in docs

--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@ $.minicolors.defaults = $.extend($.minicolors.defaults, {
                 <dt>dataUris</dt>
                 <dd>
                     <p>
-                        Set this to <code>false</code> if you require IE7 support. This setting will force
-                        the plugin to load an external image instead of using dataURIs.
+                        Set this to <code>false</code> if you require IE7/IE8 support. This setting will
+                        force the plugin to load an external image instead of using dataURIs.
                     </p>
                 </dd>
 
