--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
 
     <!-- jQuery -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
     <!-- Bootstrap 3 -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
     <!-- MiniColors -->
     <script src="jquery.minicolors.js"></script>
@@ -63,6 +63,8 @@
                 $(this).minicolors({
                     control: $(this).attr('data-control') || 'hue',
                     defaultValue: $(this).attr('data-defaultValue') || '',
+                    format: $(this).attr('data-format') || 'hex',
+                    keywords: $(this).attr('data-keywords') || '',
                     inline: $(this).attr('data-inline') === 'true',
                     letterCase: $(this).attr('data-letterCase') || 'lowercase',
                     opacity: $(this).attr('data-opacity'),
@@ -222,6 +224,35 @@
                 </div>
             </div>
 
+            <!-- RGB(A) -->
+            <h3>RGB(A)</h3>
+            <div class="well">
+                <div class="row">
+                    <div class="col-lg-4 col-sm-4 col-12">
+                        <div class="form-group">
+                            <label for="rgb">RGB</label>
+                            <br>
+                            <input type="text" id="rgb" class="form-control demo" data-format="rgb" value="rgb(33, 147, 58)">
+                            <span class="help-block">
+                                RGB input can be assigned by including the <code>data-format</code> attribute
+                                or by setting the <code>format</code> option to <code>rgb</code>.
+                            </span>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-4 col-12">
+                        <div class="form-group">
+                            <label for="rgba">RGB(A)</label>
+                            <br>
+                            <input type="text" id="rgba" class="form-control demo" data-format="rgb" data-opacity=".5" value="rgba(52, 64, 158, 0.5)">
+                            <span class="help-block">
+                                RGB(A) input can be assigned by including the <code>data-format</code> and <code>data-opacity</code> attributes
+                                or by setting the <code>format</code> option to <code>rgb</code> and <code>opacity</code> option to <code>true</code>.
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- and more -->
             <h3>&hellip;and more!</h3>
             <div class="well">
@@ -237,6 +268,20 @@
                             </span>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-sm-4 col-12">
+                        <div class="form-group">
+                            <label for="keywords">Keywords</label>
+                            <br>
+                            <input type="text" id="keywords" class="form-control demo" data-keywords="transparent, initial, inherit" value="transparent">
+                            <span class="help-block">
+                                CSS-wide keywords can be assigned by including the <code>data-keywords</code> attribute
+                                or by setting the <code>keywords</code> option to a comma-separated list of valid keywords: <code>transparent, initial, inherit</code>.<br />
+                                <small>Note: <code>none</code> is accepted, but will be converted to valid <code>transparent</code>.</small>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-lg-4 col-sm-4 col-12">
                         <div class="form-group">
                             <label for="default-value">Default Value</label>
@@ -317,9 +362,11 @@ $.minicolors = {
         control: 'hue',
         dataUris: true,
         defaultValue: '',
+        format: 'hex',
         hide: null,
         hideSpeed: 100,
         inline: false,
+        keywords: '',
         letterCase: 'lowercase',
         opacity: false,
         position: 'bottom left',
