--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
         h3 {
             color: #aaa;
         }
+        .jumbotron {
+            padding: 40px;
+        }
+        .jumbotron h1 {
+            margin-top: 0;
+        }
+        .jumbotron p:last-child {
+            margin-bottom: 0;
+        }
     </style>
 
     <script>
